Fix ASF tag album artist

BUG: 276015
FIXED-IN: 2.7